syntax = "proto3";

// Package common.v1 содержит общие типы данных
package common.v1;

option go_package = "github.com/CantDefeatAirmanx/space-engeneering/shared/pkg/proto/common/v1;common_v1";

// NotificationMethod описывает метод уведомления
message NotificationMethod {
    // provider_name имя провайдера (telegram, email, etc.)
    string provider_name= 1;
    // target целевой идентификатор (chat_id:thread_id, email, etc.)
    string target= 2;
}
